[package]
name = "request-rs"
version = "0.3.0"
authors = ["620719882@qq.com <venmosnake@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
bytes="0.5.4"
fnv="1.0.7"
itoa = "0.4.5"
serde="1.0.110"
serde_json = "1.0.53"
regex = "1.3.7"
log = "0.4.8"
net2="0.2.34"
httparse = "1.3.4"

#[dependencies.reuqest-macros]
#version="0.1.0"
#path="./reuqest-macros"

[features]
default=[]
radom_ua=[]